@@ -2,6 +2,7 @@
 Hash: SHA1
 
 DIST tagsoup-0.10.2-src.zip 63115 RMD160 4f1e6c5e56e50f742f460829952044b40c08bae8 SHA1 ec8e5ef85f1095ce630492e8e3332981b75ae210 SHA256 40648a99e910769cf029a3e526f564f254bd05add803871387e5d0b1fa2affc1
+DIST tagsoup-1.1-src.zip 216286 RMD160 d45e94d8c850fb2047a3062d35b34f44dd418dc9 SHA1 695f0735c5dda15cf92d8f24869c95066efb2e64 SHA256 3a7e2a780187385708de8400927cd1a2428284d974f184dd6f7c8c4b078fe528
 EBUILD tagsoup-0.10.2-r1.ebuild 970 RMD160 654c8ca9e61ba5470f42126be2dc61546944b717 SHA1 d47a17b2c9339741cffdd635e9b429bc82a75893 SHA256 58f46614a50f992ccb77b259b462b5044db3db9627dfe602fe72426efab6e496
 MD5 dc06b499215f9eb5d8c5b2b1c3df2136 tagsoup-0.10.2-r1.ebuild 970
 RMD160 654c8ca9e61ba5470f42126be2dc61546944b717 tagsoup-0.10.2-r1.ebuild 970
@@ -10,10 +11,14 @@ EBUILD tagsoup-0.10.2.ebuild 1165 RMD160 3df1f38c68cdaabdb066a7ed17f136f3595d7cc
 MD5 a1d0fad121118497e2024676ec80c8f0 tagsoup-0.10.2.ebuild 1165
 RMD160 3df1f38c68cdaabdb066a7ed17f136f3595d7cc4 tagsoup-0.10.2.ebuild 1165
 SHA256 a87776b4279b04e43cbd66beba5ac13a3e68abec48696b0184dd89ef5df29fc8 tagsoup-0.10.2.ebuild 1165
-MISC ChangeLog 1979 RMD160 1d93d856edd003ef5e20a421b7d6cccee68768d9 SHA1 3f1602c812011fbf06c32b8dd50c354dc13bbca2 SHA256 df72544ed8baaa4a8817923b891057b441d24c3acf96b0bc7c4ed47574b5dd5a
-MD5 043c556fc57531d6c55fe1f32728e775 ChangeLog 1979
-RMD160 1d93d856edd003ef5e20a421b7d6cccee68768d9 ChangeLog 1979
-SHA256 df72544ed8baaa4a8817923b891057b441d24c3acf96b0bc7c4ed47574b5dd5a ChangeLog 1979
+EBUILD tagsoup-1.1.ebuild 1045 RMD160 10a865bf15b082ab7b0afe0db30309a2eb07eca3 SHA1 34e983b32f8ca42e56a2ef98389d4c21402f6445 SHA256 c51e332c28c4355ad3e6797ad64e292d7d35b0bbec23a135ac26fcad781d92a9
+MD5 6516fdaf589e5b3d6c3f483059fc57d3 tagsoup-1.1.ebuild 1045
+RMD160 10a865bf15b082ab7b0afe0db30309a2eb07eca3 tagsoup-1.1.ebuild 1045
+SHA256 c51e332c28c4355ad3e6797ad64e292d7d35b0bbec23a135ac26fcad781d92a9 tagsoup-1.1.ebuild 1045
+MISC ChangeLog 2141 RMD160 82eebff3c8b0af0ca55d6e1650a21c29fd1c07ef SHA1 6df2c7474be686dbec8828de0568fa86f0f21a48 SHA256 78b316abc4e5d4ed9210ef09dda4fd5277c7304888ad36ca65f033a6e9e81a91
+MD5 11cf34fd2781ff7d109ad4d02a3d9de2 ChangeLog 2141
+RMD160 82eebff3c8b0af0ca55d6e1650a21c29fd1c07ef ChangeLog 2141
+SHA256 78b316abc4e5d4ed9210ef09dda4fd5277c7304888ad36ca65f033a6e9e81a91 ChangeLog 2141
 MISC metadata.xml 423 RMD160 d59c03d53cbf6de7942604cbf69e24e16473fe7a SHA1 69edd979c37d4cf050f81b314a8d380097c4bc29 SHA256 c66aba8d54011bf2679dd23b327fcb991c0378061bbf0fc97b984301477a11ad
 MD5 c8c7cf9dcee8db7bcbe94b0fe702792b metadata.xml 423
 RMD160 d59c03d53cbf6de7942604cbf69e24e16473fe7a metadata.xml 423
@@ -24,10 +29,13 @@ SHA256 766e889557d0d9386cca9d90299bd0272f9c0abf4b5a69bc92fb3f897c7f39fe files/di
 MD5 0f1e79192e6367cc6fcda70d44ee522d files/digest-tagsoup-0.10.2-r1 244
 RMD160 658b43f2b6e78255e77aa26402b60f8b3dd9064c files/digest-tagsoup-0.10.2-r1 244
 SHA256 766e889557d0d9386cca9d90299bd0272f9c0abf4b5a69bc92fb3f897c7f39fe files/digest-tagsoup-0.10.2-r1 244
+MD5 cf3735987448917713699a1d34bca3fd files/digest-tagsoup-1.1 238
+RMD160 dd286541945c983134c4475002f26c23aaa9741d files/digest-tagsoup-1.1 238
+SHA256 6595df12ca1d9ae8e0933638103649db5dbea8f37414c388805baef8d8ff6c0c files/digest-tagsoup-1.1 238
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.3 (GNU/Linux)
 
-iD8DBQFGE6hKcxLzpIGCsLQRAhEnAKCP7bBw6frCaBuPag2ZFr6sTtysugCfUxhV
-xwh1oDrSJoNeHwqGVvrziPo=
-=r97F
+iD8DBQFGE66JcxLzpIGCsLQRAu7uAJ4xebXRRiDENSj+o9XuOPe6c5pdLQCeLm6y
+IR2fegonpH7rcwPVuBTDuHo=
+=jdJq
 -----END PGP SIGNATURE-----
