@@ -1,0 +1,3 @@
+MD5 703b824ca6bf30099dbb839b0c3980de tagsoup-1.1-src.zip 216286
+RMD160 d45e94d8c850fb2047a3062d35b34f44dd418dc9 tagsoup-1.1-src.zip 216286
+SHA256 3a7e2a780187385708de8400927cd1a2428284d974f184dd6f7c8c4b078fe528 tagsoup-1.1-src.zip 216286
